2003-07-26  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Add test for distinct-nodes.

2003-07-23  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Add 3 more tests.

2003-07-10  Per Bothner  <per@bothner.com>

	* TestMisc.java:  New tests based on bugs reported by Francois Leygues
	<vizawalou@wanadoo.fr> 6/17 and 7/5.

2003-06-27  Per Bothner  <per@bothner.com>

	* TestMisc.java:  New test based on report from vizawalou@wanadoo.fr.

2003-05-21  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Test case.
	Bug reported 05-18 by Seshukumar_Adiraju@infosys.com.

2003-05-13  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Update and add new tests for new type syntax.

2003-05-10  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Add new test for string literal
	with quoted apostrofe and character references.
	Fix one test as '&' in string literals no longer stand for themselves.

2003-03-29  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Add parameter type specification, since
	otherwise 'new File(x)' is ambiguous in JDK 1.4.

	* TestMisc.java (main):  Add two tests for substring.

	* TestMisc.java (evalTest):  Guard against null base exception.

2003-03-04  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Add a test for computed constructors.

2003-01-24  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Update expected error message.

2002-11-20  Per Bothner  <bothner@bothner.com>

	* TestMisc.java:  Add 3 tests for QNames for method invocation.

2002-10-22  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Update 'namespace' to 'declare namespace'.

2002-07-28  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Add 4 for tests for type testing.

2002-07-24  Per Bothner  <per@bothner.com>

	* TesMisc.java (eval):  Update for gnu.expr changes.

2002-06-24  Per Bothner  <per@bothner.com>

	* TestSuite.java (main):  Document.document method is renamed to parse.

2002-06-12  Per Bothner  <per@bothner.com>
