@@ -1,3 +1,4 @@
+declare xmlspace = preserve
 let $newline := "
 ",
 $result := (document("tab.xml")/result)
